# AndroidSFMLTemplate

./: AndroidSFMLTemplate.pro  CMakeLists.txt  Console.cpp  Console.h  EntityMenager.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Singleton.hpp  TODO  UI.h  component.cpp  component.h  console.cpp  console.h  entitymenager.cpp  error_generate.cpp  error_generate.hpp  line.cpp  line.h  main.cpp  menu.cpp  menu.h  model  p.cpp  p.h  program.cpp  program.h  programstage.cpp  programstage.h  renderer.cpp  resource_getter.h  resource_manager.cpp  resource_manager.h  sfmltemp.pro  sfmltemp.supp  system.cpp  system.h  touchable.cpp  (+6 more)
EntityStuff/: Component.h  EntityStuff.cpp  EntityStuff.h  System.cpp  System.h  component.cpp  component.h  componentcontainer.cpp  componentcontainer.h  componentmanager.cpp  componentmanager.h  entity.cpp  entity.h  entity_stuff.cpp  entity_stuff.h  entitymanager.cpp  entitymanager.h  event.cpp  event.h  event.hpp  eventmanager.cpp  eventmanager.h  pool.cpp  pool.hpp  sizemap.cpp  sizemap.h  system.cpp  system.h  systemmanager.cpp  systemmanager.h
IOStuff/: program.cpp  programstage.cpp  programstage.h  resource_manager.h  singleton.hpp  touchable.cpp  touchable.h  ui.cpp  ui.h
PlatformerStuff/: colidable.cpp  colidable.h  colisiondata.cpp  colisiondata.h  dynamic.cpp  dynamic.h  guidable.cpp  guidable.h  steeringmanager.cpp  steeringmanager.h  tilemap.cpp  tilemap.h  vect.h
ScriptStuff/: parser.cpp  parser.h  script.cpp  script.h  scriptentry.cpp  scriptentry.h  scriptstuff.h
levels/: dev_room.lvl
systems/: system_ex.h
textures/: textures.conf
